2017_jug_bydgoszcz/scripts/infrastructure.yml
---
apiVersion: "v1"
kind: "List"
items:
- apiVersion: "v1"
  kind: "Service"
  metadata:
    labels:
      environment: "infrastructure"
      project: "mysql"
    name: "mysql"
  spec:
    ports:
    - port: 3306
      protocol: "TCP"
      targetPort: 3306
    selector:
      environment: "infrastructure"
      project: "mysql"
    type: "LoadBalancer"
- apiVersion: "v1"
  kind: "ConfigMap"
  metadata:
    labels:
      environment: "infrastructure"
      project: "mysql"
      version: "0.1.5"
    name: "mysql-cnf"
  data:
    custom.cnf: "[mysqld]\nsql-mode=\"\"\n"
- apiVersion: "v1"
  kind: "DeploymentConfig"
  metadata:
    labels:
      environment: "infrastructure"
      project: "mysql"
      version: "0.1.5"
    name: "mysql"
  spec:
    replicas: 1
    selector:
      environment: "infrastructure"
      project: "mysql"
    strategy:
      rollingParams:
        timeoutSeconds: 10800
      type: "Rolling"
    template:
      metadata:
        labels:
          environment: "infrastructure"
          project: "mysql"
          version: "0.1.5"
      spec:
        containers:
        - env:
          - name: "MYSQL_USER"
            value: "mysql"
          - name: "MYSQL_PASSWORD"
            value: "mysql"
          - name: "MYSQL_ROOT_PASSWORD"
            value: "mysql"
          - name: "MYSQL_DATABASE"
            value: "mysql"
          - name: "KUBERNETES_NAMESPACE"
            valueFrom:
              fieldRef:
                fieldPath: "metadata.namespace"
          image: "mysql:5.7"
          name: "mysql"
          readinessProbe:
            initialDelaySeconds: 5
            tcpSocket:
              port: 3306
          resources:
            limits:
              cpu: "0"
              memory: "0"
            requests:
              cpu: "0"
              memory: "0"
          volumeMounts:
          - mountPath: "/etc/mysql/conf.d/"
            name: "mysql-confd"
          - mountPath: "/var/lib/mysql/"
            name: "data"
        volumes:
        - configMap:
            name: "mysql-cnf"
          name: "mysql-confd"
        - emptyDir:
            medium: "Memory"
          name: "data"
    triggers:
    - type: "ConfigChange"
- apiVersion: v1
  kind: DeploymentConfig
  metadata:
    labels:
      environment: "infrastructure"
      project: "infinispan"
      version: "9.0.0.Final"
    name: transactions-repository
  spec:
    replicas: 1
    strategy:
      type: Rolling
      rollingParams:
        updatePeriodSeconds: 20
        intervalSeconds: 20
        timeoutSeconds: 600
        maxUnavailable: 1
        maxSurge: 1
    selector:
      environment: "infrastructure"
      project: "infinispan"
      version: "9.0.0.Final"
    template:
      metadata:
        labels:
          environment: "infrastructure"
          project: "infinispan"
          version: "9.0.0.Final"
      spec:
        containers:
        - args:
          - custom/transactions
          - -Djboss.default.jgroups.stack=kubernetes
          image: jboss/infinispan-server:9.0.0.Final
          imagePullPolicy: Always
          name: infinispan-server
          ports:
          - containerPort: 8181
            protocol: TCP
          - containerPort: 8888
            protocol: TCP
          - containerPort: 9990
            protocol: TCP
          - containerPort: 11211
            protocol: TCP
          - containerPort: 11222
            protocol: TCP
          - containerPort: 57600
            protocol: TCP
          - containerPort: 7600
            protocol: TCP
          - containerPort: 8080
            protocol: TCP
          terminationMessagePath: /dev/termination-log
          terminationGracePeriodSeconds: 90
          volumeMounts:
          - mountPath: /opt/jboss/infinispan-server/standalone/configuration/custom
            name: config-volume
          livenessProbe:
            exec:
              command:
              - /usr/local/bin/is_running.sh
            initialDelaySeconds: 10
            timeoutSeconds: 80
            periodSeconds: 60
            successThreshold: 1
            failureThreshold: 5
          readinessProbe:
             exec:
                command:
                - /usr/local/bin/is_healthy.sh
             initialDelaySeconds: 10
             timeoutSeconds: 40
             periodSeconds: 30
             successThreshold: 2
             failureThreshold: 5
        restartPolicy: Always
        volumes:
        - configMap:
            name: transactions-configuration
          name: config-volume
    triggers:
    - type: ConfigChange
- apiVersion: v1
  kind: Service
  metadata:
    labels:
      environment: infrastructure
      project: infinispan
      version: 9.0.0.Final
    name: transactions-repository
  spec:
    ports:
    - name: port-1
      port: 8181
      protocol: TCP
      targetPort: 8181
    - name: port-2
      port: 8888
      protocol: TCP
      targetPort: 8888
    - name: port-3
      port: 9990
      protocol: TCP
      targetPort: 9990
    - name: port-4
      port: 11211
      protocol: TCP
      targetPort: 11211
    - name: port-5
      port: 11222
      protocol: TCP
      targetPort: 11222
    - name: port-6
      port: 57600
      protocol: TCP
      targetPort: 57600
    - name: port-7
      port: 7600
      protocol: TCP
      targetPort: 7600
    - name: port-8
      port: 8080
      protocol: TCP
      targetPort: 8080
    selector:
      environment: infrastructure
      project: infinispan
      version: 9.0.0.Final
    sessionAffinity: None
    type: ClusterIP
- apiVersion: v1
  kind: Service
  metadata:
    labels:
      group: org.infinispan.microservices
      project: antifroud-checker
      provider: fabric8
      version: 1.0.0-SNAPSHOT
    name: antifroud-checker
  spec:
    ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
    selector:
      group: org.infinispan.microservices
      project: antifroud-checker
      provider: fabric8
- apiVersion: v1
  kind: Route
  metadata:
    labels:
      group: org.infinispan.microservices
      project: antifroud-checker
      provider: fabric8
      version: 1.0.0-SNAPSHOT
    name: antifroud-checker
  spec:
    port:
      targetPort: 8080
    to:
      kind: Service
      name: antifroud-checker
      weight: 100
